--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
+# Container names
+REDIS_CONTAINER_NAME=Redis
+DB_CONTAINER_NAME=PostgreSQL
+PAPERLESS_CONTAINER_NAME=Paperless-NGX
+GOTENBERG_CONTAINER_NAME=Gotenberg
+TIKA_CONTAINER_NAME=Tika
+
 # Global settings and path mappings
 #PAPERLESS_PORT=8000
 
